# wlr-xvla

./: .gitignore  Demo.ipynb  README.md  deploy.py  pyproject.toml  python3.10.INFO  python3.10.log.INFO.20251013-115022.32582.0  requirements.txt  train.py  xvla.py
__todo__/: todo-v1-inference.ipynb  todo-v3.ipynb  todo-v4-inference.ipynb  todo-v4.ipynb  todo-v5-experiment.ipynb  todo.ipynb  trace-dataloader.json
components/: losses.py  preprocessor.py
datasets/: __init__.py  common.py  dataset.py  domain_config.py  utils.py
datasets/domain_handler/: agiworld.py  base.py  lerobotv21.py  real_world.py  registry.py
eval/agibot/: agibot_client.py  run_test.sh
eval/robotwin-2.0/: client.py  server.py
evaluation/calvin/: README.md  calvin_client.py
evaluation/calvin/logs/: log.txt
evaluation/libero/: README.md  libero_client.py
evaluation/simpler/: README.md
evaluation/simpler/WidowX/: client_delta.py
evaluation/simpler/google-VA/: client_coke_can.py
evaluation/vlabench/: vlabench_client.py
models/: configuration_xvla.py  modeling_xvla.py
scripts/: finetune.py
workspaces/__todo__/: todo-v4-inference.ipynb  todo-v4.ipynb  todo-v5-experiment.ipynb
workspaces/experiment_xvla_piper_202601xx/: README.md  main.py
workspaces/todos/: todo-inference-transport.ipynb  todo-inference.ipynb  todo-v1-dataloader.ipynb  todo-v1-ik.ipynb  todo-v1.ipynb  todo-v2.ipynb  todo-v4.ipynb  todo-v5-experiment.ipynb  todo-v5-experiment.py  todo-v6-agent-accelerate.py  todo-v6-agent.ipynb  todo-v6-checkpoint.ipynb  todo.md  trace.json
workspaces/todos/_todo_rm/: _todo_rm_dataset.py  experiment_legacy.py
(+1 files in other folders)
