[build-system]
requires = [
    "setuptools", 
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "xvla-wlr"
dynamic = ["version"]
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "torch",
    "einops",
    "torchvision",
    "numpy",
    "polars",
    "nvidia_curobo @ git+https://github.com/robotodo-platform/curobo.git@7563d30",
    "peft",    
    # TODO vendored x-vla deps
    "av==15.0.0",
    "transformers<=4.51.3",
    "fastapi",
    "tensorboard",
    "peft==0.17.1",
    "uvicorn==0.34.3",
    "json_numpy==2.1.0",
    "safetensors==0.4.5",
    "numpy==1.26.3",
    "scipy==1.15.0",
    "einops==0.8.1",
    "timm==1.0.12",
    "mmengine==0.10.5",
    "pyarrow==20.0.0",
    "h5py==3.12.1",
    "accelerate==1.2.1",
    "mediapy==1.2.4",
]

[tool.setuptools.packages.find]
where = ["packages"]
namespaces = true

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
